--- a/app/views/essentials/hoteldetails.html.erb
+++ b/app/views/essentials/hoteldetails.html.erb
@@ -298,7 +298,7 @@ color:red;
 
 <div class="amenities"><%==zebra["RoomType"]["descriptionLong"] %></div>
 
-<dd class="amenities"><%= if zebra["RateInfos"]["RateInfo"]["nonRefundable"] == TRUE then "Non Refundable" end%></dd>
+<dd class="amenities"><%= if zebra["RateInfos"]["RateInfo"]["nonRefundable"] == TRUE then "Non Refundable" else "Refundable" end%></dd>
 
   <dd><a class="btn btn-primary" onClick="ga('send', 'event', 'Booking', 'Click', 'Booking');" href=<%= zebra["deepLink"].html_safe%>>Book Now</a></dd>
 
