--- a/app/views/essentials/hoteldetails.html.erb
+++ b/app/views/essentials/hoteldetails.html.erb
@@ -346,8 +346,8 @@ color:red;
           <dd><%= zebra["RateInfos"]["RateInfo"]["cancellationPolicy"].html_safe%></dd>
           <dd></dd>
           <dd>The room rates listed are for double occupancy per room unless otherwise stated and exclude tax recovery charges and service fees.</dd>
-           <dd>You will be charged the total amount of your reservation at booking</dd>
-            <dd>All prices are in $(USD)</dd>
+           <p>You will be charged the total amount of your reservation at booking.</p>
+            <p>All prices are in $(USD)</p>
 
 
       </div>
