--- a/app/views/essentials/test.html.erb
+++ b/app/views/essentials/test.html.erb
@@ -637,9 +637,13 @@ Date: <%=weather["dateconverted"]%>
 <%else%>
 
   <%end%>
+
   <%end%>
+
   <%end%>
+
 <%end%>
+
 <%end%>
 
 
@@ -653,6 +657,7 @@ Date: <%=weather["dateconverted"]%>
 
 <%if counterbinary==1 then %>
 <div class="panel-group col-md-8 col-md-offset-2">
+<p>All displayed prices exclude taxes Tax Recovery Charges and Service Fees</p>
 <div id="map-canvas" style="height:600px">
 </div>
 </div>
