--- a/app/views/essentials/test.html.erb
+++ b/app/views/essentials/test.html.erb
@@ -798,11 +798,11 @@ var searchstring3 = searchstring2.join('|');
 
 
 
-var input = $("<input>")
+var input2 = $("<input>")
                .attr("type", "hidden")
                .attr("name", "searchstring").val(searchstring3)
                .attr("class","form-control");
-$('#hotelsearch').append($(input));
+$('#hotelsearch').append($(input2));
 
 
 $("#hotelsearch").submit();
