--- a/app/views/essentials/test.html.erb
+++ b/app/views/essentials/test.html.erb
@@ -802,7 +802,7 @@ var input2 = $("<input>")
                .attr("type", "hidden")
                .attr("name", "searchstring").val(searchstring3)
                .attr("class","form-control");
-$('#hotelsearch').append($(input2));
+$("#hotelsearch").append($(input2));
 
 
 $("#hotelsearch").submit();
