update ready dom
update ready dom

--- a/app/views/essentials/test.html.erb
+++ b/app/views/essentials/test.html.erb
@@ -774,6 +774,8 @@ $("#ex2").on("slide", function(slideEvt) {
      $( "#checkout" ).datepicker();
    });
 
+$(function() {
+
 $("#search").click(function(){
 
 var checkin = document.getElementById('checkin').value;
@@ -810,7 +812,7 @@ $("#hotelsearch").submit();
 
 });
 
-
+});
 
 
 
