--- a/app/views/essentials/test.html.erb
+++ b/app/views/essentials/test.html.erb
@@ -453,6 +453,7 @@ text-decoration: none;}
 
 <%if @hotelhash != nil && @check == nil then%>
 
+<div class="panel-group col-md-8 col-md-offset-2 column"><a href="/">Return to Search</a></div>
 
 <!-- ##%@hotelhash = @hotelhash['HotelListResponse']['HotelList']['HotelSummary'].sort_by{|zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"]["ChargeableRateInfo"]["@averageRate"]} %>  !-->
 
@@ -511,6 +512,9 @@ text-decoration: none;}
 
 <%counterbinary=1%>
 
+
+
+
 <form id="accordion<%=counter%>" action="/essentials/hoteldetails" method="post" >
 
 
@@ -521,9 +525,11 @@ text-decoration: none;}
 
 
 <div class="panel-group col-md-8 col-md-offset-2 column" id="accordion" role="tablist" aria-multiselectable="true" >
+
     <div class="panel panel-default ">
 
           <div class="panel-heading" role="tab" id="heading<%=counter%>">
+
                  <h4 class="panel-title">
                       <dl>
 
@@ -659,6 +665,7 @@ Date: <%=weather["dateconverted"]%>
 <%if counterbinary==1 then %>
 <div class="panel-group col-md-8 col-md-offset-2">
 <p>All displayed prices exclude Tax Recovery Charges and Service Fees</p>
+
 
 <div id="map-canvas" style="height:600px">
 </div>
