--- a/app/views/essentials/test.html.erb
+++ b/app/views/essentials/test.html.erb
@@ -622,7 +622,7 @@
       type: 'POST',
       url: url,
       dataType:'script',
-      data: {hotelhash: JSON.stringify(hotelhash),get_latlong:JSON.stringify(get_latlong)}
+      data: {hotelhash: JSON.stringify(hotelhash),get_latlong:get_latlong}
        });
  });
 
