--- a/app/views/essentials/_accordianload.html.erb
+++ b/app/views/essentials/_accordianload.html.erb
@@ -33,27 +33,27 @@
    <ul class="sidebar-nav" id ="filters">
 
 
-<select id="filterresults" name="filterresults">
-  <option value=4>5</option>
-  <option value=9>10</option>
-  <option value=3>4</option>
-  <option value=5>6</option>
-  <option value=18>19</option>
-</select>
+<%number = [['1',0],['2',1],['3',2],['4',3],['5',4],['6',5],['7',6],['8',7],['9',8],['10',9],['11',10]]%>
+
+<%= select_tag(:filterresults,options_for_select(number,@filterresults))%>
+
 
 
 
      <li><div class="checkbox">
       <label>
-       <input type="checkbox" id = "low" name="low">
-       499-
-     </label>
+
+<%= check_box_tag(:low) %>
+<%= label_tag(:low, "low") %>
+
    </div></li>
 
    <li><div class="checkbox">
     <label>
-      <input type="checkbox" id ="high" name="high">
-      500+
+ <%= check_box_tag(:high) %>
+<%= label_tag(:high, "high") %>
+
+     </label>
     </label>
   </div></li>
 
